# cloud-api-adaptor

./: .gitignore  check_userns.py  entrypoint.sh  go.mod  versions.yaml
.github/workflows/: azure-e2e-test.yml  azure-nightly-build.yml  azure-podvm-image-build.yml  build.yaml  caa_build_and_push.yaml  daily-e2e-tests-libvirt.yaml  dependabot-go-mod-tidy.lock.yml  dependabot-go-mod-tidy.md  dependabot-go-tidy.yaml  e2e_libvirt.yaml  e2e_run_all.yaml  libvirt-podvm-image.build.yml  mgns.yaml  podvm_mkosi.yaml
azure/image/: Makefile  misc-settings.sh
azure/image/ubuntu/: azure-ubuntu.pkr.hcl  variables.pkr.hcl
cmd/cloud-api-adaptor/: main.go
cmd/process-user-data/: main_test.go
docs/: Release-Process.md
pkg/adaptor/cloud/: cloud.go
pkg/adaptor/cloud/aws/: manager.go
pkg/adaptor/cloud/azure/: manager.go  provider.go
pkg/forwarder/interceptor/: interceptor.go  interceptor_test.go
podvm/: Makefile.inc  go.mod
podvm-mkosi/: Makefile.mgns
skr-api/: Cargo.toml
skr-api/src/: .main.rs.swp  main.rs  skr-api.rs
src/cloud-api-adaptor/: Makefile  entrypoint.sh
src/cloud-api-adaptor/azure/copy-image/: README.md
src/cloud-api-adaptor/ibmcloud/: SECURE_EXECUTION.md
src/cloud-api-adaptor/libvirt/: config_libvirt.sh  kcli_cluster.sh
src/cloud-api-adaptor/podvm-mkosi/: Makefile
src/cloud-providers/: types.go
src/cloud-providers/azure/: provider.go
src/cloud-providers/libvirt/: libvirt.go  manager.go
test/e2e/: azure_test.go
test/provisioner/: provision_azure.go  provision_azure_initializer.go
test/tools/provisioner-cli/: main.go
(+21 files in other folders)
