[package]
name = "skr-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.69"
axum = "0.6.18"
clap = { version = "4.3.10", features = ["derive"] }
hyper = { version = "0.14.27", features = ["client"] }
protobuf = "3.2.0"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.29.1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
kbs_protocol = { git = "https://github.com/mkulke/image-rs.git", rev = "b64838e", default-features = false, features = ["openssl", "tdx-attester"] }
hyperlocal = { version = "0.8.0", default-features = false, features = ["server"] }
